--- a/Rumbo_a_Tensorboard.ipynb
+++ b/Rumbo_a_Tensorboard.ipynb
@@ -18,15 +18,248 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff979140",
+   "metadata": {},
+   "source": [
+    "# CALLBACKS\n",
+    "\n",
+    "Comenzamos trabajando con una red neuronal sencilla, en donde pondremos lo básico que debe contener una red neuronal definida en keras."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "fe1a715e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Please add `keras.layers.InputLayer` instead of `keras.Input` to Sequential model. `keras.Input` is intended to be used by Functional model.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Please add `keras.layers.InputLayer` instead of `keras.Input` to Sequential model. `keras.Input` is intended to be used by Functional model.\n",
+      "/home/ubuntu300/anaconda3/envs/pytorch190/lib/python3.8/site-packages/tensorflow/python/keras/optimizer_v2/optimizer_v2.py:374: UserWarning: The `lr` argument is deprecated, use `learning_rate` instead.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "1563/1563 - 22s - loss: 1.4943 - accuracy: 0.4666 - val_loss: 1.1910 - val_accuracy: 0.5783\n",
+      "Epoch 2/5\n",
+      "1563/1563 - 20s - loss: 1.1955 - accuracy: 0.5762 - val_loss: 1.0385 - val_accuracy: 0.6371\n",
+      "Epoch 3/5\n",
+      "1563/1563 - 20s - loss: 1.1001 - accuracy: 0.6116 - val_loss: 0.9951 - val_accuracy: 0.6517\n",
+      "Epoch 4/5\n",
+      "1563/1563 - 20s - loss: 1.0394 - accuracy: 0.6319 - val_loss: 0.9370 - val_accuracy: 0.6713\n",
+      "Epoch 5/5\n",
+      "1563/1563 - 19s - loss: 1.0002 - accuracy: 0.6469 - val_loss: 0.9045 - val_accuracy: 0.6864\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x7f4a1c622490>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"2\"\n",
+    "\n",
+    "import io\n",
+    "import tensorflow as tf\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import tensorflow_datasets as tfds\n",
+    "\n",
+    "from tensorflow import keras\n",
+    "from tensorflow.keras import layers\n",
+    "\n",
+    "# Make sure we don't get any GPU errors\n",
+    "#physical_devices = tf.config.list_physical_devices(\"GPU\")\n",
+    "#tf.config.experimental.set_memory_growth(physical_devices[0], True)\n",
+    "\n",
+    "(ds_train, ds_test), ds_info = tfds.load(\n",
+    "    \"cifar10\",\n",
+    "    split=[\"train\", \"test\"],\n",
+    "    shuffle_files=True,\n",
+    "    as_supervised=True,\n",
+    "    with_info=True,\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def normalize_img(image, label):\n",
+    "    \"\"\"Normalizes images\"\"\"\n",
+    "    return tf.cast(image, tf.float32) / 255.0, label\n",
+    "\n",
+    "\n",
+    "def augment(image, label):\n",
+    "    if tf.random.uniform((), minval=0, maxval=1) < 0.1:\n",
+    "        image = tf.tile(tf.image.rgb_to_grayscale(image), [1, 1, 3])\n",
+    "\n",
+    "    image = tf.image.random_brightness(image, max_delta=0.1)\n",
+    "    image = tf.image.random_flip_left_right(image)\n",
+    "\n",
+    "    return image, label\n",
+    "\n",
+    "\n",
+    "AUTOTUNE = tf.data.experimental.AUTOTUNE\n",
+    "BATCH_SIZE = 32\n",
+    "\n",
+    "# Setup for train dataset\n",
+    "ds_train = ds_train.map(normalize_img, num_parallel_calls=AUTOTUNE)\n",
+    "ds_train = ds_train.cache()\n",
+    "ds_train = ds_train.shuffle(ds_info.splits[\"train\"].num_examples)\n",
+    "ds_train = ds_train.map(augment)\n",
+    "ds_train = ds_train.batch(BATCH_SIZE)\n",
+    "ds_train = ds_train.prefetch(AUTOTUNE)\n",
+    "\n",
+    "# Setup for test Dataset\n",
+    "ds_test = ds_train.map(normalize_img, num_parallel_calls=AUTOTUNE)\n",
+    "ds_test = ds_train.batch(BATCH_SIZE)\n",
+    "ds_test = ds_train.prefetch(AUTOTUNE)\n",
+    "\n",
+    "class_names = [\n",
+    "    \"Airplane\",\n",
+    "    \"Autmobile\",\n",
+    "    \"Bird\",\n",
+    "    \"Cat\",\n",
+    "    \"Deer\",\n",
+    "    \"Dog\",\n",
+    "    \"Frog\",\n",
+    "    \"Horse\",\n",
+    "    \"Ship\",\n",
+    "    \"Truck\",\n",
+    "]\n",
+    "\n",
+    "\n",
+    "def get_model():\n",
+    "    model = keras.Sequential(\n",
+    "        [\n",
+    "            layers.Input((32, 32, 3)),\n",
+    "            layers.Conv2D(8, 3, padding=\"same\", activation=\"relu\"),\n",
+    "            layers.Conv2D(16, 3, padding=\"same\", activation=\"relu\"),\n",
+    "            layers.MaxPooling2D((2, 2)),\n",
+    "            layers.Flatten(),\n",
+    "            layers.Dense(64, activation=\"relu\"),\n",
+    "            layers.Dropout(0.1),\n",
+    "            layers.Dense(10),\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "    return model\n",
+    "\n",
+    "\n",
+    "model = get_model()\n",
+    "\n",
+    "model.compile(\n",
+    "    optimizer=keras.optimizers.Adam(lr=0.001),\n",
+    "    loss=keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "    metrics=[\"accuracy\"],\n",
+    ")\n",
+    "\n",
+    "tensorboard_callback = keras.callbacks.TensorBoard(\n",
+    "    log_dir=\"tb_callback_dir\", histogram_freq=1,\n",
+    ")\n",
+    "\n",
+    "model.fit(\n",
+    "    ds_train,\n",
+    "    epochs=5,\n",
+    "    validation_data=ds_test,\n",
+    "    callbacks=[tensorboard_callback],\n",
+    "    verbose=2,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "70b70222",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Generalmente, vamos a necesitar importar la extensión de tensorboard para poder trabajar adecuadamente en\n",
+    "Jupyter Notebook\n",
+    "\"\"\"\n",
+    "\n",
+    "%load_ext tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "748b310a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6006 (pid 9815), started 0:02:21 ago. (Use '!kill 9815' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-4d1888d0635ca149\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-4d1888d0635ca149\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%tensorboard --logdir tb_callback_dir"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64962f68",
+   "id": "bdfc36c2",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "9de0cb8979005a9fff42dde39678d4f256436e8b7f6ac6d93e23729d89a5cc76"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
